syntax = "proto3";

option java_package = "com.example.grpc.proto";
option java_outer_classname = "MemberProto";

//RPC 메서드 정의
service MemberService {
  rpc CreateMember (MemberRequest) returns (MemberCreateResponse);
}
// DTO
// 멤버 생성 요청 객체 - 필드 번호
message MemberRequest {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
}
// DTO
// 멤버 생성 응답
message MemberCreateResponse {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
}